[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Pages/ViewLeaderboard/Entry.gd" type="Script" id=1]
[ext_resource path="res://images/trash-2-48.png" type="Texture" id=2]
[ext_resource path="res://normal_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Buttons/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Buttons/TextAndIconButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/stop-3-48.png" type="Texture" id=6]

[node name="Entry" type="Control"]
anchor_right = 1.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 40 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlockColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.313726, 0.501961, 0.556863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 5.0
margin_right = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 35.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="place" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "test"

[node name="name" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 75.0
margin_top = 4.0
margin_right = 283.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "test"

[node name="submissions" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_top = 4.0
margin_right = 516.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "1"

[node name="score" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 541.0
margin_top = 4.0
margin_right = 749.0
margin_bottom = 30.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0.14902, 0.14902, 1 )
text = "test"

[node name="DeleteButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 774.0
margin_right = 809.0
rect_min_size = Vector2( 35, 35 )
size_flags_horizontal = 1
icon = ExtResource( 2 )

[node name="BlockButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 834.0
margin_right = 984.0
margin_bottom = 35.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 1
texture = ExtResource( 6 )
button_text = "Block player"

[node name="TextureRect" parent="VBoxContainer/HBoxContainer/BlockButton/HBoxContainer" index="0"]
texture = ExtResource( 6 )

[node name="Label" parent="VBoxContainer/HBoxContainer/BlockButton/HBoxContainer" index="1"]
margin_right = 140.0
text = "Block player"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer"]
margin_top = 39.0
margin_right = 984.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.313726, 0.501961, 0.556863, 1 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BlockButton" to="." method="_on_BlockButton_pressed"]

[editable path="VBoxContainer/HBoxContainer/BlockButton"]
